# local-rag-experiments

./: .gitignore  README.md  pyproject.toml
config/: .env.example  config.yaml
notes/: chromadb.md  cross-language-search-performance.md  gemini-performance-analysis.md  metadata-handling.md  mps-gpu-guide.md  towards-incremental.md
results/: benchmark_results_20250719_044550.json  benchmark_results_20250719_064953.json  benchmark_results_20250719_134714.json  benchmark_results_20250719_134836.json  experiment_notes.md  indexing_stats_bgem3_20250719_024620.md  indexing_stats_bgem3_20250719_033236.md  indexing_stats_bgem3_20250719_050352.md  indexing_stats_gemini_20250719_044846.md  indexing_stats_gemini_20250719_045419.md  indexing_stats_gemini_20250719_045745.md
scripts/: benchmark.py  check_db_content.py  clean_db.py  index_bgem3.py  index_gemini.py  query.py  search.py  update_bgem3.py  update_gemini.py
scripts/common/: chunker.py  db.py  utils.py
scripts/misc/: count_tokens.py
